# midnight-node

./: .envrc  .gitignore  .trivyignore  AGENTS.md  CODEOWNERS  COMPACTC_VERSION  Cargo.toml  Earthfile  LICENSE_HEADER.txt  README.md  justfile
.github/: pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: node-release-checklist.md
.github/scripts/: sign-binary.sh
.github/workflows/: actionlint.yml  build-publish-contract-precompiles-image.yml  build-publish-contract-precompiles.yml  build-publish-partnerchains-dev.yml  changes_check.yml  continuous-integration-checks.yml  continuous-integration-test.yml  continuous-integration.yml  e2e-tests-remote.yml  fix-metadata-conflicts-bot.yml  main.yml  (+8 more)
.sqlx/: query-2c3c37ab3d096b4a28567fa1c470ef6b00999ac4a75c2f7b046bd48dc426abfc.json  query-9a208364847311b122a42a39a4f61c02ce62fa4deea13f852f5e1aa4a09831fd.json  query-9d3266bcc40f473f5d8f1a93945657343bd1cd6ac799f2778c19e217f043de2e.json  query-bb830318bafc5c49401e3925227c66f54aeef504774b7d0ccabab2b1cb004687.json  query-d03d3302fd4920957892b3f845a7bb89b56b30885d0db745f6324a296e05fba9.json  query-fe4b41a368fd50c40e361ef1222e1c586932ec88adb1d26ee668f9ae4500e27d.json
docs/: configuration-guide.md
ledger/: Cargo.toml
local-environment/: .envrc  .gitignore  README.md  package-lock.json  package.json
metadata/: Cargo.toml  build.rs
node/: Cargo.toml
primitives/system-parameters/: Cargo.toml
primitives/system-parameters/src/: lib.rs
relay/: Cargo.toml  README.md
res/: Cargo.toml
runtime/: Cargo.toml
scripts/: verify-image.sh
ui/: package.json
(+346 files in other folders)
